fa Corrections - LTR setting

--- a/src/core/grades/components/course/core-grades-course.html
+++ b/src/core/grades/components/course/core-grades-course.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content dir="ltr">
     <ion-refresher [enabled]="gradesLoaded" (ionRefresh)="refreshGrades($event)">
         <ion-refresher-content pullingText="{{ 'core.pulltorefresh' | translate }}"></ion-refresher-content>
     </ion-refresher>
