--- a/platforms/ios/www/templates/core-grades-course.html
+++ b/platforms/ios/www/templates/core-grades-course.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content dir="ltr">
     <ion-refresher [enabled]="gradesLoaded" (ionRefresh)="refreshGrades($event)">
         <ion-refresher-content pullingText="{{ 'core.pulltorefresh' | translate }}"></ion-refresher-content>
     </ion-refresher>
